Fix Java 8 compilation errors: replace Java 9+ APIs with Java 8 equivalents
- MainController: Map.of() → static HashMap initializer
- UrlCheckService: List.of() → Collections.unmodifiableList(Arrays.asList())
- NetworkMonitorController: TableCell<> → TableCell<UrlRow,String> on all
  three anonymous inner classes (diamond on anonymous class needs Java 9+)
- pom.xml: reverted back to 1.8 source/target (code is now 8-compatible)

https://claude.ai/code/session_017GE62zbrv8rGWwB5dw7jVc